tests/error/comptime/allocation4.bz
function test()
{
	(consteval {
		let i = 0;
		__builtin_comptime_free(&i);
	});
}
